tests/init/neg/inlined-method.check
-- Error: tests/init/neg/inlined-method.scala:8:45 ---------------------------------------------------------------------
8 |    scala.runtime.Scala3RunTime.assertFailed(message) // error
  |                                             ^^^^^^^
  |                          Cannot prove the method argument is hot. Only hot values are safe to leak.
  |                          Found = ThisRef[class InlineError]. 
  |                          Non initialized field(s): value v. Calling trace:
  |                          -> class InlineError {	[ inlined-method.scala:1 ]
  |                             ^
  |                          -> Assertion.failAssert(this)	[ inlined-method.scala:2 ]
  |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |                          -> scala.runtime.Scala3RunTime.assertFailed(message) // error	[ inlined-method.scala:8 ]
  |                                                                      ^^^^^^^
